====feat: add post_test interface====
