# docs/swagger.json
@@ -4,6 +4,32 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/get_test": {
+            "get": {
+                "description": "test, return hello",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "test",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "apikey",
+                        "name": "apikey",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/health": {
             "get": {
                 "description": "API接口健康检查，Get请求",
@@ -21,8 +47,8 @@
                 }
             }
         },
-        "/api/v1/test": {
-            "get": {
+        "/api/v1/post_test": {
+            "post": {
                 "description": "test, return hello",
                 "produces": [
                     "application/json"
@@ -30,11 +56,13 @@
                 "summary": "test",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "apikey",
                         "name": "apikey",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
